k8s/api.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-svc
  namespace: talentiq
spec:
  selector:
    app: talentiq-api
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: ui-svc
  namespace: talentiq
spec:
  selector:
    app: talentiq-api
  ports:
    - port: 80
      targetPort: 8000
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: talentiq-api
  namespace: talentiq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: talentiq-api
  template:
    metadata:
      labels:
        app: talentiq-api
    spec:
      containers:
        - name: api
          image: ghcr.io/sudothai/talentiq-api:2026.03.12.0 # {"": "api"}
          ports:
            - containerPort: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: talentiq-ingress
  namespace: talentiq
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - talentiq.sudothai.com
      secretName: talentiq-tls
  rules:
    - host: talentiq.sudothai.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api-svc
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ui-svc
                port:
                  number: 80
